# VHDL-soft-core

./: .gitignore  VHDL-soft-core.xpr
Simulations/: rom_preload.txt  soft-core.cr.mti  soft-core.mpf  transcript  vsim.wlf  wlft1q91k7  wlftind4tv  wlftr114aa  wlftsvez38
Simulations/work/: _info  _lib.qdb  _lib1_14.qdb  _lib1_14.qpg  _lib1_14.qtl
Source/: Instruction set.xlsx
Source/Logic/: alu.vhd  decoder.vhd  pc.vhd  priority_encoder.vhd  processor.vhd  processor_core.vhd  program_rom.vhd  ram.vhd  rom_preload.txt  stack.vhd
Source/Logic/peripherals/: gpio.vhd
Source/Software/: assemble.bat  assembly.txt  binary.txt  code.txt  compile.bat
Source/Software/Assembler/: CMakeLists.txt  assembler.cpp  binary.txt  command_parser.cpp  command_parser.hpp  functions.cmake
Source/Software/Assembler/commands/: CMakeLists.txt  command_base.cpp  command_base.hpp  command_interface.hpp  command_parser.cpp  command_parser.hpp  commands.cpp  commands.hpp
Source/Software/Assembler/common/: CMakeLists.txt  logging.cpp  logging.hpp  spellcheck.cpp  spellcheck.hpp
Source/Software/Assembler/lines/: CMakeLists.txt  line.cpp  line.hpp
Source/Software/Assembler/preprocessing/: CMakeLists.txt  ivt.cpp  ivt.hpp  preprocessor.cpp  preprocessor.hpp
Source/Software/Compiler/: CMakeLists.txt  IOperator.cpp  IOperator.hpp  assembly.txt  binary_tree.cpp  binary_tree.hpp  compiler.cpp  operator.cpp  operator.hpp  operators.cpp  operators.hpp  token.cpp  token.hpp
Source/Software/Compiler/binary_tree/: CMakeLists.txt  IOperator.cpp  IOperator.hpp  binary_tree.cpp  binary_tree.hpp  operators.cpp  operators.hpp  token.cpp  token.hpp
Source/Software/Compiler/logging/: logging.cpp  logging.hpp
Source/Software/Compiler/optimisation/: CMakeLists.txt  IOptimisation.hpp  constant_folding.cpp  constant_folding.hpp  data_flow_analysis.cpp  data_flow_analysis.hpp
Source/Software/Compiler/optimisation/binary_tree/: CMakeLists.txt  binary_tree.cpp  binary_tree.hpp
Source/Software/Compiler/resolvers/: CMakeLists.txt  cycles_resolver.cpp  cycles_resolver.hpp  variables_resolver.cpp  variables_resolver.hpp
Source/Software/Compiler/token/: CMakeLists.txt  IOperator.hpp  assembly.cpp  assembly.hpp  keywords.cpp  keywords.hpp  line.cpp  line.hpp  operators.cpp  operators.hpp  token.cpp  token.hpp  tokenizer.cpp  tokenizer.hpp  tokenizer_singleton.hpp
Source/Testbenches/: processor_tb.vhd  stack_tb.vhd
VHDL-soft-core.ip_user_files/bd/main_design/ip/main_design_alu_0_0/sim/: main_design_alu_0_0.vhd
VHDL-soft-core.ip_user_files/bd/main_design/ip/main_design_decoder_0_0/sim/: main_design_decoder_0_0.vhd
VHDL-soft-core.ip_user_files/bd/main_design/sim/: main_design.vhd
VHDL-soft-core.ip_user_files/ip/program_rom/: program_rom.veo  program_rom.vho
VHDL-soft-core.ip_user_files/ip/stack_ram/: stack_ram.veo  stack_ram.vho
VHDL-soft-core.ip_user_files/mem_init_files/: program_rom.mif
VHDL-soft-core.srcs/constrs_1/new/: main_constraints.xdc
VHDL-soft-core.srcs/sim_1/new/: main_tb.vhd
VHDL-soft-core.srcs/sources_1/bd/main_design/: main_design.bd  main_design.bda
VHDL-soft-core.srcs/sources_1/bd/main_design/ui/: bd_9e3c1764.ui
VHDL-soft-core.srcs/sources_1/ip/: program_rom_init.coe
VHDL-soft-core.srcs/sources_1/ip/program_rom/: program_rom.xci
VHDL-soft-core.srcs/sources_1/ip/stack_ram/: stack_ram.xci
VHDL-soft-core.srcs/sources_1/new/: alu.vhd  decoder.vhd  main.vhd  pc.vhd  program_rom_impl.vhd  stack_ram_imp.vhd
(+10 files in other folders)
